objects/ESC_IntrusiveNotificationsSchema__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Components to be shown in notifications for any object</description>
    <fields>
        <fullName>ESC_BodyMsgFields__c</fullName>
        <description>API Name of fields in csv</description>
        <inlineHelpText>API Name of fields in csv</inlineHelpText>
        <label>Fields To Be Displayed In MSG (IN CSV)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Icon__c</fullName>
        <label>Icon Name (Added In Static Resource)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_ObjectAPIName__c</fullName>
        <description>The API Name of object</description>
        <label>ObjectAPIName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IntrusiveNotificationsSchema</label>
</CustomObject>